feature/like - added like component

--- a/src/app/apples/apples.component.html
+++ b/src/app/apples/apples.component.html
@@ -9,6 +9,7 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
+    <app-like></app-like>
     <button mat-button>LIKE</button>
   </mat-card-actions>
 </mat-card>
