--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,1 +1,10 @@
-<mat-toolbar color="warn">Apples</mat-toolbar>
+<mat-toolbar color="warn">
+  <span>Apples</span>
+  <span class="spacer"></span>
+  <mat-icon [matMenuTriggerFor]="menu">menu</mat-icon>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item routerLink="/">Home</button>
+    <button mat-menu-item routerLink="/apples">Apples</button>
+    <button mat-menu-item routerLink="/about">About</button>
+  </mat-menu>
+</mat-toolbar>
